CHANGES

 - upgrading load-grunt-tasks to 3.5.0 from 3.4.1

release 1.3.2
 - fixing wrong repository url in package.json
 - npm packages using specific versions
 - using node 4 for travis
 - upgrading jquery to 2.2.3 from 2.1.4
 - upgrading d3 to 3.5.16 from 3.5.9
 - upgrading requirejs to 2.2.0 from 2.1.20
 - upgrading quinit to 1.23.0 from 1.20.0

release 1.3.1
 - using grunt to automate tasks 

release 1.3.0
 - upgrading jquery to 2.1.4 from 2.0.3
 - upgrading d3 to 3.5.9 from 3.2.8
 - upgrading requirejs to 2.1.20 from 2.1.8
 - upgrading qunit to 1.20.0 from 1.15.0

release 1.2.1
 - removing empty rectangles when generating mismatch
 - using node-qunit-phantomjs to run headless tests
 - updating readme for changes in testing procedure
 - removing dependency with run-qunit.js

release 1.2.0
 - restructure project directories
 - mismatch plots for old-style data (no breakdown by quality)
 - qc json visualisation: return SVG objects, multiple objects if needed

release 1.1.0
 - package the project with bower