@@ -18,7 +18,7 @@
   ],
 
   "devDependencies" : {
-    "grunt"                : "0.4.5",
+    "grunt"                : "1.0.1",
     "grunt-cli"            : "1.2.0",
     "load-grunt-tasks"     : "3.5.0",
     "grunt-bump"           : "0.7.0",
@@ -27,7 +27,7 @@
     "grunt-contrib-watch"  : "1.0.0",
     "grunt-contrib-jshint" : "1.0.0",
     "grunt-contrib-uglify" : "1.0.1",
-    "grunt-contrib-qunit"  : "0.5.2",
+    "grunt-contrib-qunit"  : "1.2.0",
     "grunt-jsonlint"       : "1.0.7",
     "grunt-jscs"           : "2.8.0"
   }
