@@ -47,6 +47,7 @@
     </fieldset>
 
     </div>
-    <script data-main="main" src="../external/requirejs/require.js"></script>
+    <script src="../external/requirejs/require.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
