@@ -1,5 +1,9 @@
 CHANGES
 
+ - Updating test configuration so it is compatible with
+   grunt-contrib-qunit@1.2.0 and node-qunit-phantomjs@1.4.0
+ - upgrading grunt to 1.0.1 from 0.4.5
+ - upgrading grunt-contrib-qunit to 1.2.0 from 0.5.2
  - upgrading load-grunt-tasks to 3.5.0 from 3.4.1
 
 release 1.3.2
